# mac_shortcut_tips

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
scripts/: build.sh
src/: app.rs  main.rs
src/models/: mod.rs  shortcut.rs
src/utils/: mod.rs  shortcuts_loader.rs
