[package]
name = "mac_shortcut_tips"
version = "0.1.3"
edition = "2024"
description = "A native macOS app displaying keyboard shortcuts"
authors = ["Your Name"]

[dependencies]
iced = { version = "0.10", features = ["tokio", "debug"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1.17"
